--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Mountains</title>
+    <meta name="viewport" content="width=1170, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"/>
     <link rel="stylesheet" href="styles/main.css"/>
   </head>
@@ -78,6 +79,7 @@
           Mauris suscipit vel lectus at luctus.</p>
         <form class="order-form" method="post" action="/">
           <input class="order-input" type="text" placeholder="Your name:" name="name"/>
+          <span class="separator"></span>
           <input class="order-input" type="tel" placeholder="Your phone:" name="phone"/>
           <button class="btn order-btn">Order Now</button>
         </form>
