--- a/index.html
+++ b/index.html
@@ -222,4 +222,9 @@
       <a class="phone" href="tel:1234243123">1 234 243 123</a>
     </div>
   </body>
+  <script>
+    window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+    ga('create','UA-92962004-1','auto');ga('send','pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </html>
